Another major refactoring for performance improvement