@@ -2,67 +2,46 @@
 package tumor.carrier;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import tumor.growth.GrowthCount;
 import tumor.growth.GrowthRate;
+import tumor.mutation.FixedGenotype;
+import tumor.mutation.Genotype;
+import tumor.mutation.Mutation;
 import tumor.mutation.MutationGenerator;
-import tumor.mutation.MutationList;
 
 /**
  * Represents a single tumor cell.
  */
-public final class TumorCell extends FixedComponent {
-    //
+public final class TumorCell extends TumorComponent {
+    private final GrowthRate growthRate;
+
     // Tumor cells are alive when created; the state becomes DEAD
     // during the time-step advancement if a death event occurs.
-    //
     private State state = State.ALIVE;
 
-    /**
-     * Creates a founding tumor cell containing the unique global
-     * mutation list responsible for transformation; the global
-     * mutation generator is the source of somatic mutations.
-     *
-     * @param growthRate the intrinsic growth rate of the founder.
-     */
-    protected TumorCell(GrowthRate growthRate) {
-        super(growthRate);
+    private TumorCell(TumorCell parent, Genotype genotype, GrowthRate growthRate) {
+        super(parent, genotype);
+        this.growthRate = growthRate;
     }
 
     /**
-     * Creates a daughter cell with new original mutations.
-     *
-     * @param parent the parent cell.
-     *
-     * @param daughterMut the mutations originating in the daughter.
-     */
-    protected TumorCell(TumorCell parent, MutationList daughterMut) {
-        super(parent, daughterMut);
-    }
-
-    /**
-     * Creates a founding tumor cell with the global mutation generator
-     * as the source of somatic mutations.
-     *
-     * <p>Note that any mutations that triggered the transformation to
-     * malignancy will be carried by all daughter cells (and therefore
-     * may be tracked in the tumor itself), so they do not need to be
-     * explicitly specified in the founder cell.
+     * Creates a founding tumor cell containing the mutations
+     * responsible for transformation to malignancy.
      *
      * @param growthRate the intrinsic growth rate of the founder.
      *
      * @return the founding tumor cell.
      */
     public static TumorCell founder(GrowthRate growthRate) {
-        return new TumorCell(growthRate);
+        return new TumorCell(null, FixedGenotype.TRANSFORMER, growthRate);
     }
 
     /**
-     * Creates founding tumor cells having the global mutation generator
-     * as the source of somatic mutations.
+     * Creates founding tumor cells containing the mutations
+     * responsible for transformation to malignancy.
      *
      * @param cellCount the number of founders to create.
      *
@@ -117,18 +96,16 @@ public final class TumorCell extends FixedComponent {
         // This cell dies and is replaced by two daughters...
         //
         state = State.DEAD;
-        return Arrays.asList(newDaughter(tumorEnv), newDaughter(tumorEnv));
+        return List.of(newDaughter(tumorEnv), newDaughter(tumorEnv));
     }
 
     private TumorCell newDaughter(TumorEnv tumorEnv) {
         MutationGenerator mutGenerator = tumorEnv.getMutationGenerator();
-        MutationList      daughterMut  = mutGenerator.generateCellMutations();
+        List<Mutation>    daughterMut  = mutGenerator.generateCellMutations();
+        Genotype          daughterType = genotype.forDaughter(daughterMut);
+        GrowthRate        daughterRate = Mutation.apply(growthRate, daughterMut);
         
-        return newDaughter(daughterMut);
-    }
-
-    private TumorCell newDaughter(MutationList daughterMut) {
-        return new TumorCell(this, daughterMut);
+        return new TumorCell(this, daughterType, daughterRate);
     }
 
     private List<TumorCell> deathEvent() {
@@ -146,6 +123,10 @@ public final class TumorCell extends FixedComponent {
 
     @Override public final long countCells() {
         return 1L;
+    }
+
+    @Override public GrowthRate getGrowthRate() {
+        return growthRate;
     }
 
     @Override public final State getState() {
